feat: auth fixes, payments, orders, uploads, delivery assignment

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,11 @@
 {
+  "include": ["./src", "./node_modules/bcrypt/types"],
   "compilerOptions": {
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "resolvePackageJsonExports": true,
     "esModuleInterop": true,
+    "types": ["node", "bcrypt"],
     "isolatedModules": true,
     "declaration": true,
     "removeComments": true,
