tested : users, app & fixed : created-user-input dto

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "nodenext",
     "resolvePackageJsonExports": true,
     "esModuleInterop": true,
-    "types": ["node", "bcrypt"],
+    "types": ["node", "bcrypt", "jest", "mocha"],
     "isolatedModules": true,
     "declaration": true,
     "removeComments": true,
