test: enhance AuthService tests with user signup scenarios and error handling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "nodenext",
     "resolvePackageJsonExports": true,
     "esModuleInterop": true,
-    "types": ["node", "bcrypt", "jest", "mocha"],
+    "types": ["node", "bcrypt", "jest"],
     "isolatedModules": true,
     "declaration": true,
     "removeComments": true,
